package dominio;

public enum TipoReparacion {
	ILIMITADO, SIMPLE, COMPLEJO

}
